--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
   <body>
     <form method="post" action="/login">
       <label for="username">Username</label>
-      <input name="username" type="text" />
+      <input name="username" type="text" required/>
       <label for="password">Password</label>
-      <input name="password" type="password" />
+      <input name="password" type="password" required/>
       <input type="submit" value="Login" />
     </form>
     {% if error %}<em>{{ error }}</em>{% endif %}
